--- a/email.html
+++ b/email.html
@@ -1,4 +1,5 @@
-<!--email
+
+<!--The "email" page
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -9,7 +10,7 @@ Last Update: 12/12/2017  |  Alpha Stage -->
 
 <!DOCTYPE html> 
 <html>
-<title>Papaspyrou Alexandros | CV</title>
+<title>Papaspyrou Alexandros</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -29,29 +30,35 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
  
  <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu" 
   class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
-<a id="myBtn" onclick="myFunc('Demo1')" href="javascript:void(0)" class="w3-bar-item w3-button"><i class="fa fa-inbox w3-margin-right"></i>Epiloges (3)<i class="fa fa-caret-down w3-margin-left"></i></a>
+<a id="myBtn" onclick="myFunc('Demo1')" href="javascript:void(0)" class="w3-bar-item w3-button"><i class="fa fa-inbox w3-margin-right"></i>LOAD (5)<i class="fa fa-caret-down w3-margin-left"></i></a>
   <div id="Demo1" class="w3-hide w3-animate-left">
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Borge');w3_close();" id="firstTab">
       <div class="w3-container">
     <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Papaspyrou A.</span>
-        <h6>Subject: Contact Me</h6>
-        <p>liga logia apo emena</p>
       </div>
     </a>
      <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
       <div class="w3-container">
         <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">My CV</span>
-        <p>read my new cv..</p>
-      </div>
+         </div>
     </a>
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
       <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Contact Form</span>
-        <p>talk to me!</p>
-      </div>
-    </a>
-  </div>  
+        <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Contact Form</span></div></a>
+        
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('proj');w3_close();">
+<div class="w3-container">
+<img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Projects</span></div></a>    
+
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('links');w3_close();">
+<div class="w3-container">
+<img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Links</span></div></a>    
+
+
+ </div>  
 <a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Go to home page</a>
+<a href="https://alexandroshub.github.io/links" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Links</a>
+
 </nav>
 
 
@@ -90,17 +97,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   
   
   <hr>
-  <p>Hello, i just wanted to let you know that i'll be home at lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <p>Best Regards, <br>Borge Refsnes</p>
+  <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
+	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
+  
+  <p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
 </div>
 
-<div id="Jane" class="w3-container person">
-  
-  <h5 class="w3-opacity">My CV</h5>
+
+<div id="Jane" class="w3-container person"><h5 class="w3-opacity">My CV</h5>
   
   <!-- CV --><div w3-include-html="https://alexandroshub.github.io/cv.html" id="home"></div><script>w3.includeHTML();</script><!-- /CV -->
   
-  </div>
+ </div>
 
 <div id="John" class="w3-container person">
   <br>
@@ -109,16 +117,23 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   <h4><i class="fa fa-clock-o"></i> From John Doe, Sep 23, 2015.</h4>
   <a class="w3-button w3-light-grey">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
   <a class="w3-button w3-light-grey">Forward<i class="w3-margin-left fa fa-arrow-right"></i></a>
-  <hr>
-  <p>Welcome.</p>
-  
+<hr><p>Contact Me.</p>
 <!-- www.123formbuilder.com script begins here -->
 <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script>
-<!-- www.123formbuilder.com script ends here -->  
-  
-  <p>That's it!</p>
-</div>
-     
+<!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
+ 
+ 
+<div id="proj" class="w3-container person"><h5 class="w3-opacity">My proj</h5>
+<!-- proj --><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
+ 
+<div id="links" class="w3-container person"><h5 class="w3-opacity">My links</h5>
+<!-- links --><div w3-include-html="https://alexandroshub.github.io/links.html" id="home"></div><script>w3.includeHTML();</script><!-- /links --> </div>
+ 
+ 
+ 
+ 
+ 
+ 
 </div>
 
 <script>
