--- a/email.html
+++ b/email.html
@@ -1,4 +1,3 @@
-
 <!--The "email" page
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -72,9 +71,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Subject: Contact Me</h5>
   <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
-  <a class="w3-button w3-light-grey" href="#">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-light-grey" href="#">Forward<i class="w3-margin-left fa fa-arrow-right"></i></a>
-
+  <a class="w3-button w3-red" href="#">sent me Email<i class="w3-margin-left fa fa-mail-reply"></i></a>
+  <a class="w3-button w3-blue" href="#">sent me message<i class="w3-margin-left fa fa-mail-reply"></i></a>
+  <a class="w3-button w3-green" href="#">Call Me<i class="w3-margin-left fa fa-arrow-right"></i></a>
+<a class="w3-button w3-light-grey" href="#">talk to my BOT<i class="w3-margin-left fa fa-mail-reply"></i></a>
 <br><br>   
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:black"></i></a>
 <a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:black"></i></a>
@@ -123,7 +123,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
  
  
-<div id="proj" class="w3-container person"><h5 class="w3-opacity">My proj</h5>
+<div id="proj" class="w3-container person"><h5 class="w3-opacity" id="proj">My proj</h5>
 <!-- proj --><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
  
 <div id="links" class="w3-container person"><h5 class="w3-opacity">My links</h5>
