--- a/email.html
+++ b/email.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
       <div class="w3-container">
         <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Contact Form</span></div></a>
         
-<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('proj');w3_close();">
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('proj');w3_close();" id="proj">
 <div class="w3-container">
 <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Projects</span></div></a>    
 
@@ -53,11 +53,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <div class="w3-container">
 <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Links</span></div></a>    
 
-
- </div>  
+</div>  
 <a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Go to home page</a>
 <a href="https://alexandroshub.github.io/links" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Links</a>
-
 </nav>
 
 
@@ -72,7 +70,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   <h5 class="w3-opacity">Subject: Contact Me</h5>
   <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
   <a class="w3-button w3-red" href="#">sent me Email<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-blue" href="#">sent me message<i class="w3-margin-left fa fa-mail-reply"></i></a>
   <a class="w3-button w3-green" href="#">Call Me<i class="w3-margin-left fa fa-arrow-right"></i></a>
 <a class="w3-button w3-light-grey" href="#">talk to my BOT<i class="w3-margin-left fa fa-mail-reply"></i></a>
 <br><br>   
@@ -94,46 +91,23 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
 <a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
 <a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a> 
-  
-  
-  <hr>
+<hr>
   <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
 	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
-  
-  <p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
+	<p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
 </div>
+<!-- CV --><div id="Jane" class="w3-container person"><h5 class="w3-opacity">My CV</h5><div w3-include-html="https://alexandroshub.github.io/cv.html" id="home"></div><script>w3.includeHTML();</script></div><!-- /CV -->
 
-
-<div id="Jane" class="w3-container person"><h5 class="w3-opacity">My CV</h5>
-  
-  <!-- CV --><div w3-include-html="https://alexandroshub.github.io/cv.html" id="home"></div><script>w3.includeHTML();</script><!-- /CV -->
-  
- </div>
-
-<div id="John" class="w3-container person">
-  <br>
-  <img class="w3-round w3-animate-top" src="/w3images/avatar2.png" style="width:20%;">
-  <h5 class="w3-opacity">Subject: None</h5>
-  <h4><i class="fa fa-clock-o"></i> From John Doe, Sep 23, 2015.</h4>
-  <a class="w3-button w3-light-grey">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-light-grey">Forward<i class="w3-margin-left fa fa-arrow-right"></i></a>
-<hr><p>Contact Me.</p>
+<div id="John" class="w3-container person"><hr><p>Contact Me.</p>
 <!-- www.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script>
-<!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
- 
- 
+<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
+
 <div id="proj" class="w3-container person"><h5 class="w3-opacity" id="proj">My proj</h5>
 <!-- proj --><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
  
 <div id="links" class="w3-container person"><h5 class="w3-opacity">My links</h5>
 <!-- links --><div w3-include-html="https://alexandroshub.github.io/links.html" id="home"></div><script>w3.includeHTML();</script><!-- /links --> </div>
- 
- 
- 
- 
- 
- 
+
 </div>
 
 <script>
@@ -177,10 +151,7 @@ function openMail(personName) {
 }
 </script>
 
-<script>
-var openTab = document.getElementById("firstTab");
-openTab.click();
-</script>
+<script> var openTab = document.getElementById("firstTab"); openTab.click(); </script>
 
 </body>
-</html> 
+</html>
