--- a/email.html
+++ b/email.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
       <div class="w3-container">
         <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Contact Form</span></div></a>
         
-<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('proj');w3_close();" id="proj">
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('proj');w3_close();" >
 <div class="w3-container">
 <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Projects</span></div></a>    
 
@@ -70,6 +70,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   <h5 class="w3-opacity">Subject: Contact Me</h5>
   <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
   <a class="w3-button w3-red" href="#">sent me Email<i class="w3-margin-left fa fa-mail-reply"></i></a>
+  <a class="w3-button w3-blue" href="#">sent me message<i class="w3-margin-left fa fa-mail-reply"></i></a>
   <a class="w3-button w3-green" href="#">Call Me<i class="w3-margin-left fa fa-arrow-right"></i></a>
 <a class="w3-button w3-light-grey" href="#">talk to my BOT<i class="w3-margin-left fa fa-mail-reply"></i></a>
 <br><br>   
