--- a/email.html
+++ b/email.html
@@ -104,7 +104,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
 
 <div id="proj" class="w3-container person"><h5 class="w3-opacity" id="proj">My proj</h5>
-<!-- proj --><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
+<!-- proj --><a id="proj"><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
  
 <div id="links" class="w3-container person"><h5 class="w3-opacity">My links</h5>
 <!-- links --><div w3-include-html="https://alexandroshub.github.io/links.html" id="home"></div><script>w3.includeHTML();</script><!-- /links --> </div>
