--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!--
+<!-- projets
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 22/10/2017  |  Pre-alpha Stage -->
+Last Update: 12/12/2017  |  alpha Stage -->
 
 <!DOCTYPE html> 
 <html>
@@ -72,10 +72,11 @@ body, html {
 }
 </style>
 <body>
-<!-- MENU --><div w3-include-html="https://alexandroshub.github.io/navtopmenu.html"></div><script>w3.includeHTML();</script><!-- /MENU -->
+<a href="javascript:void(0)" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:60;"></a>
+
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="projhome">
   <div class="w3-display-middle" style="white-space:nowrap;">
       <center>  <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">My Creations</span><br>
 
@@ -152,20 +153,14 @@ body, html {
 <a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-clone"></i></button></a>
 </p><br>
 
-
-
-    <h4 class="w3-center">Μια εργασία για το Εργαστήριο Βιομηχανικών Εγκαταστάσεων Αυτοματισμού.</h4>
+<h4 class="w3-center">Μια εργασία για το Εργαστήριο Βιομηχανικών Εγκαταστάσεων Αυτοματισμού.</h4>
     <h3 class="w3-center">Τεχνικές MPPT</h3>
 <p class="w3-center"><em>Ανάλυση Τεχνικών Ανίχνευσης Σημείου Μέγιστης Ισχύος Φωτοβολταϊκού.</em><br>
 <a href="https://issuu.com/a-papaspyrou/docs/mppt_final">
 <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></a>
 <a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-clone"></i></button></a>
 </p><br>
-
- <!-- About Section -->
-
-</div>
-
+<!-- About Section --></div>
 
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
@@ -183,15 +178,19 @@ body, html {
 <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></a>
 <a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-clone"></i></button></a>
 </p><br>
-
- <!-- About Section -->
-
+<!-- About Section -->
 </div>
 
-<span class="w3-hide-large">
-<!-- footer -->
-<div w3-include-html="https://alexandroshub.github.io/footer.html"></div><script>w3.includeHTML();</script><!-- /footer --></span>
-
+<!-- Footer --><footer class="w3-center w3-black w3-padding-16">
+<!-- top --> <a href="#projhome" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
+<!-- social --><div class="w3-black w3-center w3-padding-12">
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:15px;color:white"></i></a>
+<!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
+<!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+</footer><!-- End footer -->
 <script>
 // Script to open and close sidebar
 function w3_open() {
@@ -234,10 +233,7 @@ function toggleFunction() {
 </html>
 
 <!--
-
 That's all folks! 
-
-Future ideas: search engine | podcast | more arduino and raspberry projects
 
 Mail: a-papaspyrou@outlook.com.gr  
 Mob: 00306949452023
@@ -251,5 +247,3 @@ https://pastebin.com
 https://hta.gr
 https://www.hubspot.com
 -->
-
-<!-- ================================================================   -->
