--- a/cv.html
+++ b/cv.html
@@ -1,3 +1,4 @@
+
 <!--CVwebpage
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -5,7 +6,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 22/9/2017  |  Pre-alpha Stage -->
+Last Update: 12/12/2017  |  alpha Stage -->
 <!DOCTYPE html> 
 <html>
 <title>Papaspyrou Alexandros | CV</title>
@@ -35,7 +36,7 @@ body, html {
 </style>
 <body class="w3-light-grey">
 
-<a href="javascript:void(0)" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:60;"></a>
+<a href="https://alexandroshub.github.io" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:60;" id="cvhome"></a>
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -48,7 +49,7 @@ body, html {
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:100%" alt="Papaspyrou ">
+          <img src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:100%" alt="Papaspyrou">
 
 <div class="w3-display-bottomleft w3-container w3-text-black"></div></div><div class="w3-container">
          <p><i class="fa fa-user fa-fw w3-margin-right w3-large w3-text-black"></i>Papaspyrou Alexandros</p>     
@@ -236,7 +237,16 @@ C / PHP / Matlab / Simulink / LabView / Multisim
 <!-- End Grid --></div>
 <br>
 
-<!-- Footer --><div w3-include-html="https://alexandroshub.github.io/footer.html"></div><script>w3.includeHTML();</script><!-- End Footer -->
+<!-- Footer --><footer class="w3-center w3-black w3-padding-16">
+<!-- top --> <a href="#cvhome" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
+<!-- social --><div class="w3-black w3-center w3-padding-12">
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:15px;color:white"></i></a>
+<!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
+<!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+</footer><!-- End footer -->
 
 <script>// Script to open and close sidebar
 function w3_open() {
