--- a/intex.html
+++ b/intex.html
@@ -1,4 +1,3 @@
-
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -9,7 +8,6 @@ Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
 Last Update: 12/12/2017  |  Beta Stage 
 -->
-
 
 <!DOCTYPE html>
 <html>
@@ -34,7 +32,7 @@ body, html {
 }
 
 /* First image (Logo. Full height) */
-.bgimg-1 { background-image: url('https://s3.envato.com/files/213398345/Corporate%20Background%20201_preview1.jpg');
+.bgimg-1 { background-image: url('https://78.media.tumblr.com/8937d35a833445c7fb2fa3274fdc5aaf/tumblr_p0rjsf7ujG1si59zfo1_1280.jpg');
     min-height: 100%;}
 
 /* Second image (Portfolio) */
@@ -73,7 +71,7 @@ body, html {
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user"></i> ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th"></i> PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-plus-circle"></i> PLUS</a>
-    <a href="https://m.me/papaspyrou.alexandros" class="w3-bar-item w3-button"><i class="fa fa-comments-o"></i></a>
+    <a href="https://m.me/papaspyrou.alexandros" class="w3-bar-item w3-button"><i class="fa fa-comments-o"></i> Messenger</a>
   </div>
 </div>
 
@@ -247,88 +245,39 @@ Files & Publications</div>
 </div>
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">please... wait...</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-
-  <div class="w3-row w3-padding-32 w3-section"> 
-  
-  <center><a href="https://robodayblog.wordpress.com"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD BLOG</button></a>
-  <a href="https://alexandroshub.github.io/plus.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD PLUS</button></a>
-  </center>
-  
-  </div>
+  <h3 class="w3-center">Η δημιουργία του plus ειναι σε εξέλιξη .</h3>
+  <p class="w3-center"><em>θα ειναι διαθέσιμο μέσα στο πρώτο εξάμηνο του 2018.
+  <br> Μέχρι τότε... </em>
+  <br>
+<a href="https://robodayblog.wordpress.com"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD BLOG</button></a>
+<a href="https://alexandroshub.github.io/plus.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD PLUS</button></a>
+</p>
 </div>
 
-
 <!-- finale -->
-
-
 <div class="w3-row w3-center w3-dark-grey w3-padding-8">
-  <div class="w3-section"><b>soon</b> :: 
-  
+  <div class="w3-section"><b>soon</b> ::   
   </div>
 </div>
-
-
-<!-- finale -->
-
-
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-   <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
-<!-- SM --><div class="w3-black w3-center w3-padding-12">
-<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
-<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
-<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
-<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
-<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
-<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
-<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
-<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017</div>
-<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:50px;" class="w3-circle w3-animate-opacity w3-animate-zoom"> 
-
-<div class="w3-display-left w3-text-white w3-large" style="padding:24px 48px">
-
-<img src="https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:300px;">
-</div>
-<!--
-<br><audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio> 
-<br>
-
-    -->
+<!-- Footer --><footer class="w3-center w3-black w3-padding-16">
+<!-- top --> <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
+<!-- social --><div class="w3-black w3-center w3-padding-12">
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:15px;color:white"></i></a>
+<!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
+<!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+<!-- <audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio> -->
 </footer><!-- End footer -->
- 
-<!-- scripts -->
-<script>
+<!-- scripts --><script>
 // Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
+function onClick(element) { document.getElementById("img01").src = element.src; document.getElementById("modal01").style.display = "block"; var captionText = document.getElementById("caption"); captionText.innerHTML = element.alt;}
 // Change style of navbar on scroll
 window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
-
+function myFunction() {var navbar = document.getElementById("myNavbar"); if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) { navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white"; } else { navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", ""); }}
 // Used to toggle the menu on small screens when clicking on the menu button
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
+function toggleFunction() { var x = document.getElementById("navDemo");  if (x.className.indexOf("w3-show") == -1) { x.className += " w3-show"; } else { x.className = x.className.replace(" w3-show", ""); }}
 </script>
 
 </body>
