--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
-<!--The "email" page
+
+<!--The "about" page
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -27,10 +28,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Subject: Contact Me</h5>
   <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
-  <a class="w3-button w3-red" href="#">sent me Email<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-blue" href="#">sent me message<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-green" href="#">Call Me<i class="w3-margin-left fa fa-arrow-right"></i></a>
-<a class="w3-button w3-light-grey" href="#">talk to my BOT<i class="w3-margin-left fa fa-mail-reply"></i></a>
+  <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
+  <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
+  <a class="w3-button w3-green" href="tel:+306949452023">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
+<a class="w3-button w3-light-grey" href="#">Talk to my BOT<i class="w3-margin-left fa fa-cogs"></i></a>
 <br><br>   
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:black"></i></a>
 <a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:black"></i></a>
