--- a/intex.html
+++ b/intex.html
@@ -1,3 +1,4 @@
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -32,7 +33,7 @@ body, html {
 }
 
 /* First image (Logo. Full height) */
-.bgimg-1 { background-image: url('https://78.media.tumblr.com/8937d35a833445c7fb2fa3274fdc5aaf/tumblr_p0rjsf7ujG1si59zfo1_1280.jpg');
+.bgimg-1 { background-image: url('https://78.media.tumblr.com/30e56a4f87321de321e98556b022813f/tumblr_p0sxo3UYRB1si59zfo3_r1_1280.png');
     min-height: 100%;}
 
 /* Second image (Portfolio) */
@@ -78,7 +79,12 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">TECH <span class="w3-hide-small">SUPPORT & </span> SOLUTIONS</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity ">
+      <span class="w3-hide-small">TECH </span>
+      <span class="w3-hide-small  w3-hide-medium"> SUPPORT & </span> 
+      <span class="w3-hide-small"> SOLUTIONS</span>
+      <span class="w3-hide-large w3-hide-medium">Automations </span>
+    </span>
   </div>
 </div>
 
@@ -122,7 +128,7 @@ body, html {
 </center>
 
 </div>
-<!-- gri bara -->
+<!-- gri bara
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section"><span class="w3-xlarge">
   <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
@@ -137,7 +143,7 @@ body, html {
   <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
   <br>150+</span><br>Meetings</div>
 </div>
-
+ -->
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
@@ -267,7 +273,7 @@ Files & Publications</div>
 <!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
 <!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
 <!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
-<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 <!-- <audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio> -->
 </footer><!-- End footer -->
 <!-- scripts --><script>
