--- a/intex.html
+++ b/intex.html
@@ -1,4 +1,3 @@
-
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -7,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 12/12/2017  |  Beta Stage 
+Last Update: 15/12/2017  |  Beta Stage 
 -->
 
 <!DOCTYPE html>
@@ -260,9 +259,38 @@ Files & Publications</div>
 </p>
 </div>
 
+
+  
+
+<!-- SSM -->
+<style>
+.accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
+.active, .accordion:hover {  background-color: #ccc;}
+.accordion:after {    content: '\002B';    color: #777;    font-weight: bold;    float: right;    margin-left: 5px;}
+.active:after {    content: "\2212";}
+.panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
+</style>
+<button class="accordion">SUPPORT</button>
+<div class="panel">
+  <p>soon.</p>
+</div>
+<button class="accordion">SOLUTIONS</button>
+<div class="panel">
+  <p>soon.</p>
+</div>
+<button class="accordion">MORE</button>
+<div class="panel">
+  <p>soon.</p>
+</div>
+<script>
+var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
+</script>
+<!-- SSM -->
+
 <!-- finale -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-8">
   <div class="w3-section"><b>soon</b> ::   
+  
   </div>
 </div>
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
